fix: inline image alignment

--- a/src/components/markup/inline-image/index.module.css
+++ b/src/components/markup/inline-image/index.module.css
@@ -1,3 +1,4 @@
 .inline_image {
   height: 1.5em;
+  vertical-align: middle;
 }
